--- a/capstone-data-science/Milan_neighborhoods.ipynb
+++ b/capstone-data-science/Milan_neighborhoods.ipynb
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1655,14 +1655,14 @@
      "output_type": "stream",
      "text": [
       "My credentails:\n",
-      "CLIENT_ID: XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0\n",
-      "CLIENT_SECRET:C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO\n"
+      "CLIENT_ID: ...\n",
+      "CLIENT_SECRET:...\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO' # your Foursquare Secret\n",
+    "CLIENT_ID = '...' # your Foursquare ID\n",
+    "CLIENT_SECRET = '...' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('My credentails:')\n",
