--- a/machine-learning-projects/clustering-neighborhoods-Toronto.ipynb
+++ b/machine-learning-projects/clustering-neighborhoods-Toronto.ipynb
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1015,15 +1015,15 @@
      "output_type": "stream",
      "text": [
       "My credentails:\n",
-      "CLIENT_ID: XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0\n",
-      "CLIENT_SECRET:C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO\n"
+      "CLIENT_ID: ...\n",
+      "CLIENT_SECRET:...\n"
      ]
     }
    ],
    "source": [
     "#setup the credentials to use Foursquare\n",
-    "CLIENT_ID = 'XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO' # your Foursquare Secret\n",
+    "CLIENT_ID = '...' # your Foursquare ID\n",
+    "CLIENT_SECRET = '...' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('My credentails:')\n",
@@ -4216,9 +4216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4230,7 +4230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.5"
   },
   "toc-autonumbering": true
  },
