--- a/capstone-data-science/Milan_neighborhoods.ipynb
+++ b/capstone-data-science/Milan_neighborhoods.ipynb
@@ -53,7 +53,7 @@
     "* number of existing parking areas for car sharing in the range of 300m from the neighborhood **(max 1)**\n",
     "\n",
     "The sources I'll need to extract/generate the required information:\n",
-    "* The website **[...]** publishes real estate values for Italy, aggregated from the regions through borough down to the street level. It will be used to find the neighborhoods and the related real estate index.\n",
+    "* Real estate values for Italy have been scraped from different public websites [...]. They will be used to find the neighborhoods and the related real estate index.\n",
     "* **Openstreetmap Nominatim API for geocoding**, to find the neighborhoods’ latitude and longitude, and the coordinates of Milan center.\n",
     "* The**Foursquare API** used to retrieve the list of venues for the selected neighborhoods.\n",
     "* The **open dataset portal of the Municipality of Milan** (https://dati.comune.milano.it/dataset) will be used to find the parking areas for car sharing.\n",
@@ -3971,6 +3971,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
