--- a/machine-learning-projects/clustering-neighborhoods-Toronto.ipynb
+++ b/machine-learning-projects/clustering-neighborhoods-Toronto.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "**1.4 Clustering and analyzing the clusters**\n",
     "\n",
-    "NOTE: please use nbviewer to render the folium maps"
+    "**NOTE: please use nbviewer to render the folium maps: https://nbviewer.org/**"
    ]
   },
   {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1015,15 +1015,15 @@
      "output_type": "stream",
      "text": [
       "My credentails:\n",
-      "CLIENT_ID: ...\n",
-      "CLIENT_SECRET:...\n"
+      "CLIENT_ID: XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0\n",
+      "CLIENT_SECRET:C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO\n"
      ]
     }
    ],
    "source": [
     "#setup the credentials to use Foursquare\n",
-    "CLIENT_ID = '...' # your Foursquare ID\n",
-    "CLIENT_SECRET = '...' # your Foursquare Secret\n",
+    "CLIENT_ID = 'XVDNOAMFQKJXJNJ25Q2VBYWILOIKR02VHEYGCM0VDACQW2L0' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'C5WAKNFXTFCH3NYY3Y30J4V4GYG1JPHEWNEQOVJU3UPHFKXO' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('My credentails:')\n",
