--- a/misc/DL0321EN_4_1_Comparing_Models_py_v1_0.ipynb
+++ b/misc/DL0321EN_4_1_Comparing_Models_py_v1_0.ipynb
@@ -128,29 +128,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KWVs-3_-8lG3",
-        "outputId": "49d4c290-4c0b-4a89-f0fa-e2a18715f877"
+        "outputId": "13bf3d36-3289-4a85-d0f1-31cd2421ba25"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-04-28 16:46:26--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DL0321EN/data/concrete_data_week4.zip\n",
+            "--2022-04-29 07:42:43--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DL0321EN/data/concrete_data_week4.zip\n",
             "Resolving s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)... 67.228.254.196\n",
             "Connecting to s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)|67.228.254.196|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 261483817 (249M) [application/zip]\n",
             "Saving to: ‘concrete_data_week4.zip’\n",
             "\n",
-            "concrete_data_week4 100%[===================>] 249.37M  13.9MB/s    in 28s     \n",
+            "concrete_data_week4 100%[===================>] 249.37M  34.3MB/s    in 7.1s    \n",
             "\n",
-            "2022-04-28 16:46:54 (8.96 MB/s) - ‘concrete_data_week4.zip’ saved [261483817/261483817]\n",
+            "2022-04-29 07:42:51 (35.3 MB/s) - ‘concrete_data_week4.zip’ saved [261483817/261483817]\n",
             "\n"
           ]
         }
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 3,
       "metadata": {
         "id": "DxxnsLjr8lG8"
       },
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "id": "YqM_4Cig8lG8"
       },
@@ -286,14 +286,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7n9X8igU8lG9",
-        "outputId": "977b9993-87c3-44ad-c5ea-d2b953a92eb3"
+        "outputId": "843cfc03-c136-4a7b-fc2e-5ac5b7bd6c3d"
       },
       "outputs": [
         {
@@ -327,13 +327,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VpDoAUod8lG-",
-        "outputId": "4b54ffde-0a0d-45ae-d82c-9c8b12fec484"
+        "outputId": "7c80ac73-0a6c-4f0b-d2e2-a64a0eb6aea9"
       },
       "outputs": [
         {
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "id": "-1eFtQ9s8lG-"
       },
@@ -390,13 +390,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mq4uIK48lG_",
-        "outputId": "0d255368-c3f2-4fc7-96ae-170b8be0d58d"
+        "outputId": "ccc64b93-34cb-440b-ef1c-108117530867"
       },
       "outputs": [
         {
@@ -404,9 +404,9 @@
           "name": "stdout",
           "text": [
             "Epoch 1/2\n",
-            "301/301 [==============================] - 203s 674ms/step - loss: 0.0799 - accuracy: 0.9766 - val_loss: 0.0251 - val_accuracy: 0.9945\n",
+            "301/301 [==============================] - 391s 1s/step - loss: 0.2151 - accuracy: 0.9308 - val_loss: 0.0313 - val_accuracy: 0.9919\n",
             "Epoch 2/2\n",
-            "301/301 [==============================] - 207s 686ms/step - loss: 0.0196 - accuracy: 0.9957 - val_loss: 0.0152 - val_accuracy: 0.9957\n"
+            "301/301 [==============================] - 370s 1s/step - loss: 0.0230 - accuracy: 0.9945 - val_loss: 0.0176 - val_accuracy: 0.9957\n"
           ]
         }
       ],
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {
         "id": "99GqVe0C8lG_"
       },
@@ -491,11 +491,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {
-        "id": "mX8NUHVo8lHA"
+        "id": "mX8NUHVo8lHA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "879e6508-99bc-4d1e-9cd8-38f5b39b36f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "# 1 loading the ResNet50 saved model\n",
         "\n",
@@ -503,18 +515,18 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "model_resnet = load_model('/content/drive/MyDrive/Colab Notebooks/classifier_resnet_model.h5')\n",
-        "model_vgg = model"
+        "model_vgg = load_model('classifier_vgg_model.h5')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nlRdzlOw8lHA",
-        "outputId": "c3f35938-def0-43e0-c46e-2af3b233735b"
+        "outputId": "5e5e6a7a-5b71-4538-ec63-a455ce6b0103"
       },
       "outputs": [
         {
@@ -532,26 +544,27 @@
         "    'concrete_data_week4/test',\n",
         "    target_size=(image_resize, image_resize),\n",
         "    batch_size=batch_size_test,\n",
-        "    class_mode='categorical')"
+        "    class_mode='categorical',\n",
+        "    shuffle = True) # added the shuffle parameter"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w3yL51IL8lHB",
-        "outputId": "85b3855a-05c6-4663-db55-0166ac36a1d6"
+        "outputId": "62d0bf5c-a38f-4e28-cb71-1a7d1c8b1514"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: UserWarning: `Model.evaluate_generator` is deprecated and will be removed in a future version. Please use `Model.evaluate`, which supports generators.\n",
-            "  \n"
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: UserWarning: `Model.evaluate_generator` is deprecated and will be removed in a future version. Please use `Model.evaluate`, which supports generators.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
           ]
         },
         {
@@ -571,28 +584,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_90YyVj68lHB",
-        "outputId": "a9af7901-cf35-416f-e8cf-02aca399a57c"
+        "outputId": "b5f9b914-2e58-4d36-999b-a0a30a8ce077"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: UserWarning: `Model.evaluate_generator` is deprecated and will be removed in a future version. Please use `Model.evaluate`, which supports generators.\n",
-            "  \n"
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: UserWarning: `Model.evaluate_generator` is deprecated and will be removed in a future version. Please use `Model.evaluate`, which supports generators.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "VGG16 Loss = 0.0132 and Accuracy = 0.996\n"
+            "VGG16 Loss = 0.0153 and Accuracy = 0.996\n"
           ]
         }
       ],
@@ -663,23 +676,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eBFSRHP58lHC",
-        "outputId": "6011057c-7a80-46de-f3fe-02c2ac53e8e8"
+        "outputId": "22115a34-f3f1-473b-ba92-c77d62ea85af"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: UserWarning: `Model.predict_generator` is deprecated and will be removed in a future version. Please use `Model.predict`, which supports generators.\n",
-            "  \n",
             "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: UserWarning: `Model.predict_generator` is deprecated and will be removed in a future version. Please use `Model.predict`, which supports generators.\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: UserWarning: `Model.predict_generator` is deprecated and will be removed in a future version. Please use `Model.predict`, which supports generators.\n",
+            "  after removing the cwd from sys.path.\n"
           ]
         }
       ],
@@ -692,13 +705,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1iMqZ52T8lHC",
-        "outputId": "6debbb74-33c6-4db8-eece-deefba539593"
+        "outputId": "9147b960-f3f6-4436-b254-c5b140c50cab"
       },
       "outputs": [
         {
@@ -707,19 +720,19 @@
           "text": [
             "Class predictions for ResNet50:\n",
             "\n",
-            "1:  Positive  (99.99%)\n",
-            "2:  Positive  (100.0%)\n",
-            "3:  Positive  (100.0%)\n",
-            "4:  Positive  (99.97%)\n",
-            "5:  Positive  (100.0%)\n",
+            "1:  Positive  (100.0%)\n",
+            "2:  Positive  (99.96%)\n",
+            "3:  Negative  (99.99%)\n",
+            "4:  Positive  (100.0%)\n",
+            "5:  Negative  (99.94%)\n",
             "\n",
             "Class predictions for VGG16:\n",
             "\n",
-            "1:  Positive  (100.0%)\n",
-            "2:  Positive  (99.99%)\n",
-            "3:  Positive  (100.0%)\n",
-            "4:  Negative  (99.98%)\n",
-            "5:  Positive  (99.95%)\n"
+            "1:  Negative  (99.73%)\n",
+            "2:  Positive  (97.74%)\n",
+            "3:  Negative  (99.03%)\n",
+            "4:  Negative  (82.27%)\n",
+            "5:  Negative  (99.91%)\n"
           ]
         }
       ],
