--- a/misc/DL0321EN_4_1_Comparing_Models_py_v1_0.ipynb
+++ b/misc/DL0321EN_4_1_Comparing_Models_py_v1_0.ipynb
@@ -156,7 +156,8 @@
         }
       ],
       "source": [
-        "# get the data\n",
+        "# Get the data\n",
+        "\n",
         "!wget https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DL0321EN/data/concrete_data_week4.zip"
       ]
     },
@@ -169,6 +170,8 @@
       },
       "outputs": [],
       "source": [
+        "# Note, I cleaned the output because it took too much vertical space\n",
+        "\n",
         "!unzip concrete_data_week4.zip"
       ]
     },
@@ -509,12 +512,14 @@
         }
       ],
       "source": [
-        "# 1 loading the ResNet50 saved model\n",
+        "# 1 Loading the ResNet50 saved model\n",
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "\n",
+        "# I stored in Google Drive the ResNet50 model which I save previously after training\n",
         "model_resnet = load_model('/content/drive/MyDrive/Colab Notebooks/classifier_resnet_model.h5')\n",
+        "\n",
+        "# I reload the VGG16 model from the training which I run before (not really necessary)\n",
         "model_vgg = load_model('classifier_vgg_model.h5')"
       ]
     },
